--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 		<title>मलाई खल्ती गर्दिनु</title>
 	</head>
 	<body style='margin:0 auto; text-align:center; padding:50px;'>
-		<img src="assets/khalti_logo_alt_new.png" height=100 />
+		<img src="khalti_logo_alt_new.png" height=100 />
 		<h1 style='line-height:20px;'>
 			मलाई खल्ती गर्दिनु
 		</h1>
-		<img src="assets/daamiqr.png" style='max-width:600px' style='margin-top:-200px; display:block;'/>
+		<img src="daamiqr.png" style='max-width:600px' style='margin-top:-200px; display:block;'/>
 		<br />
 		<div style='margin-top:30px'>
-		<a href="https://khalti.com/android" ><img src="assets/googleplay.png" width=150 /></a>
-		<a href="https://khalti.com/ios"><img src="assets/appstore.png" width=150 /></a>
+		<a href="https://khalti.com/android" ><img src="googleplay.png" width=150 /></a>
+		<a href="https://khalti.com/ios"><img src="appstore.png" width=150 /></a>
 		</div>
 	</body>
 </html>
