--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<h1 style='line-height:20px;'>
 			मलाई खल्ती गर्दिनु
 		</h1>
-		<img src="daamiqr.png" style='max-width:600px' style='margin-top:-200px; display:block;'/>
+		<img src="daamiqr.png" style='max-width:600px' style='margin-top:-200px; display:none;'/>
 		<br />
 		<div style='margin-top:30px'>
 		<a href="https://khalti.com/android" ><img src="googleplay.png" width=150 /></a>
